// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createSpotShape > both sides of active bin > left side of active bin > excluding active bin 1`] = `
{
  "219": [
    0n,
    76923076n,
  ],
  "220": [
    0n,
    76923076n,
  ],
  "221": [
    0n,
    76923076n,
  ],
  "222": [
    0n,
    76923076n,
  ],
  "223": [
    0n,
    76923076n,
  ],
  "224": [
    0n,
    76923076n,
  ],
  "225": [
    0n,
    76923076n,
  ],
  "226": [
    0n,
    76923076n,
  ],
  "227": [
    0n,
    76923076n,
  ],
  "228": [
    0n,
    76923076n,
  ],
  "229": [
    0n,
    76923076n,
  ],
  "230": [
    0n,
    76923076n,
  ],
  "231": [
    0n,
    76923088n,
  ],
}
`;

exports[`createSpotShape > both sides of active bin > left side of active bin > ignore tokens from right side 1`] = `
{
  "219": [
    0n,
    76923076n,
  ],
  "220": [
    0n,
    76923076n,
  ],
  "221": [
    0n,
    76923076n,
  ],
  "222": [
    0n,
    76923076n,
  ],
  "223": [
    0n,
    76923076n,
  ],
  "224": [
    0n,
    76923076n,
  ],
  "225": [
    0n,
    76923076n,
  ],
  "226": [
    0n,
    76923076n,
  ],
  "227": [
    0n,
    76923076n,
  ],
  "228": [
    0n,
    76923076n,
  ],
  "229": [
    0n,
    76923076n,
  ],
  "230": [
    0n,
    76923076n,
  ],
  "231": [
    0n,
    76923088n,
  ],
}
`;

exports[`createSpotShape > both sides of active bin > left side of active bin > including active bin 1`] = `
{
  "221": [
    0n,
    51056207n,
  ],
  "222": [
    0n,
    51056207n,
  ],
  "223": [
    0n,
    51056207n,
  ],
  "224": [
    0n,
    51056207n,
  ],
  "225": [
    0n,
    51056207n,
  ],
  "226": [
    0n,
    51056207n,
  ],
  "227": [
    0n,
    51056207n,
  ],
  "228": [
    0n,
    51056207n,
  ],
  "229": [
    0n,
    51056207n,
  ],
  "230": [
    0n,
    51056207n,
  ],
  "231": [
    0n,
    51056207n,
  ],
  "232": [
    1000000000n,
    438381723n,
  ],
}
`;

exports[`createSpotShape > both sides of active bin > return the correct shape #1 1`] = `
{
  "-1": [
    0n,
    100000000n,
  ],
  "-10": [
    0n,
    100000000n,
  ],
  "-2": [
    0n,
    100000000n,
  ],
  "-3": [
    0n,
    100000000n,
  ],
  "-4": [
    0n,
    100000000n,
  ],
  "-5": [
    0n,
    100000000n,
  ],
  "-6": [
    0n,
    100000000n,
  ],
  "-7": [
    0n,
    100000000n,
  ],
  "-8": [
    0n,
    100000000n,
  ],
  "-9": [
    0n,
    100000000n,
  ],
  "0": [
    90909100n,
    0n,
  ],
  "1": [
    90909090n,
    0n,
  ],
  "10": [
    90909090n,
    0n,
  ],
  "2": [
    90909090n,
    0n,
  ],
  "3": [
    90909090n,
    0n,
  ],
  "4": [
    90909090n,
    0n,
  ],
  "5": [
    90909090n,
    0n,
  ],
  "6": [
    90909090n,
    0n,
  ],
  "7": [
    90909090n,
    0n,
  ],
  "8": [
    90909090n,
    0n,
  ],
  "9": [
    90909090n,
    0n,
  ],
}
`;

exports[`createSpotShape > both sides of active bin > return the correct shape #2 1`] = `
{
  "225": [
    0n,
    123236919n,
  ],
  "226": [
    0n,
    123236919n,
  ],
  "227": [
    0n,
    123236919n,
  ],
  "228": [
    0n,
    123236919n,
  ],
  "229": [
    0n,
    123236919n,
  ],
  "230": [
    0n,
    123236919n,
  ],
  "231": [
    0n,
    123236919n,
  ],
  "232": [
    38609052n,
    137341567n,
  ],
  "233": [
    137341564n,
    0n,
  ],
  "234": [
    137341564n,
    0n,
  ],
  "235": [
    137341564n,
    0n,
  ],
  "236": [
    137341564n,
    0n,
  ],
  "237": [
    137341564n,
    0n,
  ],
  "238": [
    137341564n,
    0n,
  ],
  "239": [
    137341564n,
    0n,
  ],
}
`;

exports[`createSpotShape > right side of active bin > excluding active bin 1`] = `
{
  "233": [
    55555565n,
    0n,
  ],
  "234": [
    55555555n,
    0n,
  ],
  "235": [
    55555555n,
    0n,
  ],
  "236": [
    55555555n,
    0n,
  ],
  "237": [
    55555555n,
    0n,
  ],
  "238": [
    55555555n,
    0n,
  ],
  "239": [
    55555555n,
    0n,
  ],
  "240": [
    55555555n,
    0n,
  ],
  "241": [
    55555555n,
    0n,
  ],
  "242": [
    55555555n,
    0n,
  ],
  "243": [
    55555555n,
    0n,
  ],
  "244": [
    55555555n,
    0n,
  ],
  "245": [
    55555555n,
    0n,
  ],
  "246": [
    55555555n,
    0n,
  ],
  "247": [
    55555555n,
    0n,
  ],
  "248": [
    55555555n,
    0n,
  ],
  "249": [
    55555555n,
    0n,
  ],
  "250": [
    55555555n,
    0n,
  ],
}
`;

exports[`createSpotShape > right side of active bin > ignore tokens from left side 1`] = `
{
  "233": [
    55555565n,
    0n,
  ],
  "234": [
    55555555n,
    0n,
  ],
  "235": [
    55555555n,
    0n,
  ],
  "236": [
    55555555n,
    0n,
  ],
  "237": [
    55555555n,
    0n,
  ],
  "238": [
    55555555n,
    0n,
  ],
  "239": [
    55555555n,
    0n,
  ],
  "240": [
    55555555n,
    0n,
  ],
  "241": [
    55555555n,
    0n,
  ],
  "242": [
    55555555n,
    0n,
  ],
  "243": [
    55555555n,
    0n,
  ],
  "244": [
    55555555n,
    0n,
  ],
  "245": [
    55555555n,
    0n,
  ],
  "246": [
    55555555n,
    0n,
  ],
  "247": [
    55555555n,
    0n,
  ],
  "248": [
    55555555n,
    0n,
  ],
  "249": [
    55555555n,
    0n,
  ],
  "250": [
    55555555n,
    0n,
  ],
}
`;

exports[`createSpotShape > right side of active bin > including active bin 1`] = `
{
  "232": [
    93705688n,
    1000000000n,
  ],
  "233": [
    50349684n,
    0n,
  ],
  "234": [
    50349684n,
    0n,
  ],
  "235": [
    50349684n,
    0n,
  ],
  "236": [
    50349684n,
    0n,
  ],
  "237": [
    50349684n,
    0n,
  ],
  "238": [
    50349684n,
    0n,
  ],
  "239": [
    50349684n,
    0n,
  ],
  "240": [
    50349684n,
    0n,
  ],
  "241": [
    50349684n,
    0n,
  ],
  "242": [
    50349684n,
    0n,
  ],
  "243": [
    50349684n,
    0n,
  ],
  "244": [
    50349684n,
    0n,
  ],
  "245": [
    50349684n,
    0n,
  ],
  "246": [
    50349684n,
    0n,
  ],
  "247": [
    50349684n,
    0n,
  ],
  "248": [
    50349684n,
    0n,
  ],
  "249": [
    50349684n,
    0n,
  ],
  "250": [
    50349684n,
    0n,
  ],
}
`;
